# Car-Data-Collector

./: .gitignore  README.md  setup_crosscompiler_enviroment.sh
GUI/: CMakeLists.txt
MPU6050-test/: self_test.sh
go-socket-data-handler/: test-dataset.txt
go-tui/: go.mod  main.go  test-dataset.txt
go-tui/drawtui/: drawtui.go
go-tui/formater/: formater.go
go-tui/randomgen/: random.go
kernel_module/: Makefile  README.md  kernel_module_flowchart(i2c_mpu6050).odg
kernel_module/test/i2c_mpu6050/: i2c_mpu6050.c
kernel_module/test/uart_gps/: Makefile  serdev_overlay.dts
src/GUI-GTK3/: CMakeLists.txt  README.md
src/GUI-GTK3/gladeFiles/: GUI_car.glade  GUI_car_1.glade
src/GUI-GTK3/include/: app.h  device.h  drawing.h  objectsGtk.h  windows.h
src/GUI-GTK3/src/: app.c  device.c  drawing.c  main.c  objectsGtk.c  windows.c
src/MPU6050-bash-test/: self_test.sh
src/go-socket-data-handler/: main.go
src/go-socket-data-handler/formater/: formater.go
src/go-socket-data-handler/randomgen/: random.go
src/kernel-module/: README.md  car_data_collector.c
src/test-kernel-modules/: README.md  setup_env_sshfs.py
src/test-kernel-modules/i2c_mpu6050/: Makefile  Makefile.crosscompile  i2c_mpu6050.c  read_value_iotcl.c
src/test-kernel-modules/i2c_mpu6050_for_test/: i2c_mpu6050.c
src/test-kernel-modules/uart_gps/: Makefile  gps.c
